syntax = "proto3";

package pb;

service Rdss {

  rpc MetadataRead(MetadataReadRequest) returns (MetadataReadResponse);

  rpc MetadataCreate(MetadataCreateRequest) returns (MetadataCreateResponse);

  rpc MetadataUpdate(MetadataUpdateRequest) returns (MetadataUpdateResponse);

  rpc MetadataDelete(MetadataDeleteRequest) returns (MetadataDeleteResponse);

}

message MetadataReadRequest {}

message MetadataReadResponse {}

message MetadataCreateRequest {}

message MetadataCreateResponse {}

message MetadataUpdateRequest {}

message MetadataUpdateResponse {}

message MetadataDeleteRequest {}

message MetadataDeleteResponse {}